OMG!! I hate CSS

--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <p>I will guide you through world best recipes.</p>
-    <h2>Here some of them</h2>
+    <h1 class="page-title">Odin Recipes</h1>
+    <p class="para">I will guide you through world best recipes.</p>
+    <h2 class="sec-para">Here some of them</h2>
     <ol>
       <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
       <li>
-        <a href="recipes/Pasta Fazool (Pasta e Fagioli).html"
-          >Pasta Fazool (Pasta e Fagioli)</a
-        >
+        <a href="recipes/Pasta.html">Pasta Fazool (Pasta e Fagioli)</a>
       </li>
       <li>
-        <a href="recipes/Chicken and Broccoli Stir Fry.html"
-          >Chicken and Broccoli Stir Fry</a
-        >
+        <a href="recipes/Chicken.html">Chicken and Broccoli Stir Fry</a>
       </li>
     </ol>
   </body>
