--- a/recipes/Chicken.html
+++ b/recipes/Chicken.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chicken and Broccoli Stir Fry</title>
+    <link rel="stylesheet" href="../style.css" />
+    <style>
+      * {
+        text-align: left;
+        background-color: #274060;
+      }
+
+      .home-button {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <a href="../index.html">Home</a>
+    <div class="home-button"><a href="../index.html">Home</a></div>
     <h1>Chicken and Broccoli Stir Fry</h1>
     <p>
       This chicken and broccoli recipe is easy to make by stir-frying chicken
