--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pasta Fazool (Pasta e Fagioli)</title>
+    <style>
+      * {
+        text-align: left;
+        background-color: #274060;
+      }
+
+      #home-button {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <a href="../index.html">Home</a>
+    <div id="home-button"><a href="../index.html">Home</a></div>
     <h1>Pasta Fazool (Pasta e Fagioli)</h1>
     <p>
       Pasta fazool is a classic Italian-American comfort food. This recipe works
