--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lasagna</title>
+    <link rel="stylesheet" href="..//style.css" />
+    <style>
+      * {
+        text-align: left;
+        background-color: #274060;
+      }
+
+      .home-button {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <a href="../index.html">Home</a>
+    <div class="home-button"><a href="../index.html">Home</a></div>
     <h1>World's Best Lasagna</h1>
     <p>
       This lasagna recipe takes a little work, but it is so satisfying and
