--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="page-title">Odin Recipes</h1>
     <p class="para">I will guide you through world best recipes.</p>
-    <h2 class="sec-para">Here some of them</h2>
+    <h2 class="sec-title">Here some of them</h2>
     <ol>
       <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
       <li>
