Changed recipes list and do some styling with CSS

--- a/index.html
+++ b/index.html
@@ -3,21 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
+    <title>Project: Recipes</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="page-title">Odin Recipes</h1>
-    <p class="para">I will guide you through world best recipes.</p>
-    <h2 class="sec-title">Here some of them</h2>
-    <ol>
-      <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-      <li>
-        <a href="recipes/Pasta.html">Pasta Fazool (Pasta e Fagioli)</a>
-      </li>
-      <li>
-        <a href="recipes/Chicken.html">Chicken and Broccoli Stir Fry</a>
-      </li>
-    </ol>
+    <header>
+      <a href="/index.html"
+        ><button type="button" class="go-home" title="Go to Homepage">
+          Go Home
+        </button></a
+      >
+    </header>
+    <article>
+      <h1>Odin Recipes</h1>
+      <p>
+        Welcome to Odin Recipes, where delicious meets simple! Discover an
+        inspiring collection of easy-to-follow recipes, from comforting classics
+        to exciting new flavors. Whether you’re a beginner or a seasoned cook,
+        you’ll find step-by-step instructions, helpful tips, and plenty of ideas
+        to make every meal special. Start exploring and bring more joy to your
+        kitchen today!
+      </p>
+      <nav>
+        <h2>Here some of the best</h2>
+        <ol>
+          <li>
+            <a href="/recipes/ScrambledEgg.html">Scrambled Hot Dogs and Eggs</a>
+          </li>
+          <li>
+            <a href="/recipes/Pesto.html">Pesto Tortellini Bake</a>
+          </li>
+          <li>
+            <a href="/recipes/Avocado.html">Egg Avocado Toast</a>
+          </li>
+        </ol>
+      </nav>
+    </article>
   </body>
 </html>
